// ARDH Property Management Database Schema (DBML)
// Can be visualized at: https://dbdiagram.io

Table Users {
  Id uuid [pk]
  Name varchar [not null]
  Email varchar [not null, unique]
  Phone varchar [not null]
  PasswordHash varchar [not null]
  Address varchar
  Role varchar [not null] // admin, property_manager, accountant, viewer
  Permissions varchar // Comma-separated scopes
  AvatarUrl varchar
  IsActive boolean [not null, default: true]
  LastLoginAt timestamp
  RefreshToken varchar
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table ForgotPassword {
  Id integer [pk, increment]
  UserId uuid [not null]
  Email varchar [not null]
  Token varchar [not null]
  OTP varchar [not null]
  DateTime timestamp [not null]
}

Table Buildings {
  Id uuid [pk]
  BuildingName varchar [not null]
  Address varchar [not null]
  City varchar [not null]
  State varchar [not null]
  Country varchar [not null]
  GoogleMapLink varchar
  TotalFloors integer [not null]
  ParkingDetails varchar
  Status varchar [not null, default: 'active'] // active, inactive
  Description varchar
  ImageUrl varchar
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table Settings {
  Id uuid [pk]
  CompanyName varchar [not null]
  CompanyEmail varchar [not null]
  Phone varchar [not null]
  Address varchar [not null]
  Icon varchar
  Fav varchar
  AdminPassword varchar [not null]
  UpdatedBy uuid
  UpdatedAt timestamp [not null]
}

Table DeletedHistories {
  Id uuid [pk]
  EntityType varchar [not null]
  EntityId uuid [not null]
  EntityTitle varchar [not null]
  DeletedBy uuid
  DeletedAt timestamp [not null]
  RestoredAt timestamp
  RestoredBy uuid
}

Table Owners {
  Id uuid [pk]
  FullName varchar [not null]
  Phone varchar [not null]
  Email varchar [not null, unique]
  City varchar [not null]
  Address varchar [not null]
  IdType varchar [not null] // AadharCard, PanCard, Passport, DrivingLicense
  IdNumber varchar [not null]
  BankName varchar [not null]
  AccountNumber varchar [not null]
  IfscCode varchar [not null]
  Status varchar [not null, default: 'Active'] // Active, Inactive
  Notes varchar
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table Apartments {
  Id uuid [pk]
  BuildingId uuid [not null]
  OwnerId uuid [not null]
  NestawayId varchar [not null]
  FlatNumber varchar [not null]
  Floor integer [not null]
  ApartmentType varchar [not null] // BHK1, BHK2, BHK3, BHK4, Studio, Penthouse
  AreaSqft decimal [not null]
  Bedrooms integer [not null]
  Bathrooms integer [not null]
  HasBalcony boolean [not null]
  ParkingSlot varchar [not null]
  ExpectedRent decimal [not null]
  MaintenanceCharge decimal [not null]
  WaterCharge decimal [not null]
  CurrentTenantId uuid
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table Tenants {
  Id uuid [pk]
  BuildingId uuid [not null]
  ApartmentId uuid [not null]
  FullName varchar [not null]
  Phone varchar [not null]
  Email varchar [not null]
  IdType varchar [not null] // AadharCard, PanCard, Passport, DrivingLicense
  IdNumber varchar [not null]
  IdProofAttachmentUrl varchar
  MoveInDate timestamp [not null]
  LeaseStartDate timestamp [not null]
  LeaseEndDate timestamp
  MonthlyRent decimal [not null]
  SecurityDeposit decimal [not null]
  EmergencyContactName varchar
  EmergencyContactPhone varchar
  Status varchar [not null, default: 'Active'] // Active, MovedOut, Evicted
  Notes varchar
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table TenantMoveOutRecords {
  Id uuid [pk]
  TenantId uuid [not null]
  ApartmentId uuid [not null]
  MoveOutDate timestamp [not null]
  PendingRent decimal [not null]
  DamageAmount decimal [not null]
  RefundAmount decimal [not null]
  IdNumber varchar [not null]
  HandoverNote varchar
  ProcessedBy uuid [not null]
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table Vendors {
  Id uuid [pk]
  Name varchar [not null]
  CompanyName varchar [not null]
  Phone varchar [not null]
  Email varchar [not null]
  VendorType varchar [not null] // Maintenance, Plumbing, Electrical, Cleaning, Security, Utilities, Supplies
  GstNumber varchar [not null]
  Address varchar [not null]
  Status varchar [not null, default: 'Active'] // Active, Inactive
  Notes varchar [not null]
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table Equipment {
  Id uuid [pk]
  BuildingId uuid [not null]
  Name varchar [not null]
  Type varchar [not null] // Lift, Generator, WaterPump, CCTV, FireExtinguisher, AC, SolarPanel, Others
  Brand varchar [not null]
  Model varchar [not null]
  SerialNumber varchar [not null]
  InstallDate timestamp [not null]
  WarrantyExpiryDate timestamp [not null]
  AmcVendorId uuid [not null]
  AmcExpiryDate timestamp [not null]
  LastServiceDate timestamp [not null]
  NextServiceDate timestamp [not null]
  Status varchar [not null, default: 'Operational'] // Operational, UnderMaintenance, Broken, Replaced
  Notes varchar [not null]
  AttachmentUrl varchar [not null]
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table AmcContracts {
  Id uuid [pk]
  AmcCode varchar [not null]
  ContractNumber varchar [not null]
  ContractTitle varchar [not null]
  ContractType varchar [not null] // Comprehensive, NonComprehensive, LaborOnly
  EquipmentId uuid [not null]
  VendorId uuid [not null]
  StartDate timestamp [not null]
  EndDate timestamp [not null]
  ContractAmount decimal [not null]
  PaymentTerms varchar [not null] // Monthly, Quarterly, HalfYearly, Annually
  ServiceFrequency varchar [not null] // Monthly, Quarterly, HalfYearly, Annually
  CoverageDetails varchar [not null]
  Exclusions varchar [not null]
  DocumentLink varchar [not null]
  Remarks varchar [not null]
  Status varchar [not null, default: 'Active'] // Active, Expired, Terminated
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table MaintenanceRequests {
  Id uuid [pk]
  Title varchar [not null]
  Description varchar [not null]
  Category varchar [not null] // Plumbing, Electrical, Carpentry, Painting, Cleaning, Security, Lift, Generator, PestControl, WaterSupply, Others
  Priority varchar [not null] // Low, Medium, High, Critical
  Status varchar [not null, default: 'Open'] // Open, InProgress, Resolved, Closed, Cancelled
  VendorId uuid
  EquipmentId uuid
  BuildingId uuid [not null]
  ApartmentId uuid
  EstimatedCost decimal [not null]
  AnnualCost decimal [not null]
  ScheduledDate timestamp
  ReceiptAttachmentUrl varchar
  Notes varchar
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table IncomeRecords {
  Id uuid [pk]
  IncomeEntity varchar [not null] // Tenant, Building, Owner, Others
  IncomeType varchar [not null] // Rent, Maintenance, Parking, SecurityDeposit, LateFee, Others
  Amount decimal [not null]
  TenantId uuid
  BuildingId uuid
  ApartmentId uuid
  Period varchar [not null] // e.g. 'May 2026'
  PaymentDate timestamp [not null]
  PaymentMethod varchar [not null] // Cash, BankTransfer, Cheque, UPI, Online
  TransactionReference varchar
  Status varchar [not null] // Paid, Pending, Overdue, Cancelled
  Notes varchar
  AttachmentUrl varchar
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table ExpenseRecords {
  Id uuid [pk]
  Category varchar [not null] // Maintenance, Repairs, Utilities, Supplies, Salaries, Taxes, Insurance, WaterTanker, Others
  ExpenseHead varchar
  SpecificItem varchar
  VendorId uuid
  Nature varchar [not null] // Capital, Operational
  Amount decimal [not null]
  Entity varchar [not null] // Building, Apartment, General
  BuildingId uuid
  ApartmentId uuid
  ExpenseDate timestamp [not null]
  PaymentMethod varchar [not null] // Cash, BankTransfer, Cheque, UPI, Online
  Status varchar [not null] // Paid, Pending, Cancelled
  Reference varchar
  AttachmentUrl varchar
  Description varchar
  TankerNumber varchar
  TimeOfDelivery timestamp
  DeliveryDriverName varchar
  ManagerInAttendance varchar
  LitersFilled integer
  CreatedAt timestamp [not null]
  UpdatedAt timestamp [not null]
  CreatedBy uuid
  UpdatedBy uuid
}

Table Notifications {
  Id uuid [pk]
  Type varchar [not null]
  Title varchar [not null]
  Detail varchar [not null]
  CreatedAt timestamp [not null]
}

Table NotificationRecipients {
  Id uuid [pk]
  NotificationId uuid [not null]
  UserId uuid [not null]
  IsRead boolean [not null, default: false]
  ReadAt timestamp
}

Table Activities {
  Id uuid [pk]
  ActionType varchar [not null] // Create, Update, Delete, StatusChange, MoveOut
  EntityType varchar [not null] // Building, Apartment, Tenant, etc.
  EntityId uuid [not null]
  BuildingId uuid
  Description varchar [not null]
  CreatedAt timestamp [not null]
}

// Relationships
Ref: ForgotPassword.UserId > Users.Id
Ref: Apartments.BuildingId > Buildings.Id
Ref: Apartments.OwnerId > Owners.Id
Ref: Apartments.CurrentTenantId > Tenants.Id
Ref: Tenants.BuildingId > Buildings.Id
Ref: Tenants.ApartmentId > Apartments.Id
Ref: TenantMoveOutRecords.TenantId > Tenants.Id
Ref: TenantMoveOutRecords.ApartmentId > Apartments.Id
Ref: TenantMoveOutRecords.ProcessedBy > Users.Id
Ref: Equipment.BuildingId > Buildings.Id
Ref: Equipment.AmcVendorId > Vendors.Id
Ref: AmcContracts.EquipmentId > Equipment.Id
Ref: AmcContracts.VendorId > Vendors.Id
Ref: MaintenanceRequests.BuildingId > Buildings.Id
Ref: MaintenanceRequests.ApartmentId > Apartments.Id
Ref: MaintenanceRequests.VendorId > Vendors.Id
Ref: MaintenanceRequests.EquipmentId > Equipment.Id
Ref: IncomeRecords.TenantId > Tenants.Id
Ref: IncomeRecords.BuildingId > Buildings.Id
Ref: IncomeRecords.ApartmentId > Apartments.Id
Ref: ExpenseRecords.VendorId > Vendors.Id
Ref: ExpenseRecords.BuildingId > Buildings.Id
Ref: ExpenseRecords.ApartmentId > Apartments.Id
Ref: NotificationRecipients.NotificationId > Notifications.Id
Ref: NotificationRecipients.UserId > Users.Id
Ref: Activities.BuildingId > Buildings.Id
